--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,156 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;300&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Outfit', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p {
+  font-size: 1.6rem;
+}
+
+h1 {
+  font-size: 6rem;
+}
+
+.app {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: #fff;
+}
+
+.app:before{
+  content: '';
+  background: url('./assets/chalkboard.jpg') no-repeat center center/cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.app .search {
+  text-align: center;
+  padding: 1rem;
+}
+
+.app input {
+  padding: .7rem 1.5rem;
+  font-size: 1.2rem;
+  border-radius: 25px;
+  border: 1px solid rgba(255,255,255,0.8);
+  background: rgba(255, 255, 255, 0.1);
+  color: #f8f8f8;
+}
+
+::placeholder {
+  color: #f8f8f8;
+}
+
+.container{
+  max-width: 700px;
+  height: 550px;
+  margin: auto;
+  padding: 0 1rem;
+  position: relative;
+  top: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.app .top {
+  text-align: center;
+  width: 100%;
+  margin: 1rem auto;
+}
+
+#stand {
+  position:relative;
+  height:400px;
+  width: 300px;
+  margin-top: 35px;
+}
+
+.app .bottom {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  width: 100%;
+  margin: 1rem auto;
+  padding: 1rem;
+  border-radius: 12px;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.bold {
+  font-weight: 700;
+}
+
+li {
+  list-style-type: none;
+}
+
+#hangmanBody {
+  position:absolute;
+  height:200px;
+  width:200px;
+  margin-left:330px;
+  margin-top:-330px;
+}
+
+#head {
+  height:50px;
+  width: 50px;
+}
+
+#body {
+  margin-top:-9px;
+  height:100px;
+  width: 20px;
+}
+
+#leftArm {
+  position: absolute;
+  margin-top:-80px;
+  margin-left: -28px;
+  height:30px;
+  width: 30px;
+}
+
+#rightArm {
+  position: absolute;
+  margin-top:-80px;
+  margin-left: -5px;
+  height:30px;
+  width: 30px;
+}
+
+#leftLeg {
+  position: absolute;
+  margin-top:-8px;
+  margin-left: -30px;
+  height:30px;
+  width: 30px;
+}
+
+#rightLeg {
+  position: absolute;
+  margin-top:-8px;
+  margin-left: -3px;
+  height:30px;
+  width: 30px;
 }
